# factiva-fetcher

./: .env.sample  Dockerfile  makefile  pyproject.toml  pytest.ini
src/analysis/: llm.py
src/api/: main.py  streamer.py
src/functions/processor/: main.py
src/notification/: discord.py
src/pubsub/: publisher.py
src/storage/: bigquery.py
tests/analysis/: test_llm.py
tests/api/: __init__.py  test_streamer.py
tests/functions/: test_processor.py
tests/notification/: test_discord.py
tests/pubsub/: test_publisher.py
tests/storage/: test_bigquery.py
